base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  hostnames:
    - w1.leven-lake.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: podinfo
          port: 9898
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
